--- a/app/src/main/res/layout/fragment_task_item.xml
+++ b/app/src/main/res/layout/fragment_task_item.xml
@@ -7,43 +7,54 @@
     tools:context=".TaskItemFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layoutFrgmanet"
         android:layout_width="413dp"
-        android:layout_height="109dp">
+        android:layout_height="109dp"
+        android:background="#B8B8B8">
 
         <TextView
             android:id="@+id/taskTitle"
             android:layout_width="95dp"
             android:layout_height="41dp"
+            android:gravity="center"
+            android:shadowColor="#353535"
             android:text="@string/textview"
+            android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.424"
+            app:layout_constraintHorizontal_bias="0.05"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.088" />
+            app:layout_constraintVertical_bias="0.205" />
 
         <TextView
             android:id="@+id/taskBody"
             android:layout_width="180dp"
             android:layout_height="51dp"
+            android:gravity="center"
+            android:shadowColor="#353535"
             android:text="@string/textview"
+            android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.579"
+            app:layout_constraintHorizontal_bias="0.068"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.948" />
+            app:layout_constraintVertical_bias="1.0" />
 
         <TextView
             android:id="@+id/taskState"
             android:layout_width="75dp"
             android:layout_height="28dp"
+            android:gravity="center"
+            android:shadowColor="#353535"
             android:text="@string/textview"
+            android:textColor="#FBFBFB"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.092"
+            app:layout_constraintHorizontal_bias="0.044"
             app:layout_constraintStart_toEndOf="@+id/taskTitle"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.074" />
+            app:layout_constraintVertical_bias="0.172" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
