--- a/app/src/main/res/layout/fragment_task_item.xml
+++ b/app/src/main/res/layout/fragment_task_item.xml
@@ -31,7 +31,7 @@
             android:id="@+id/taskBody"
             android:layout_width="180dp"
             android:layout_height="51dp"
-            android:gravity="center"
+            android:gravity="start"
             android:shadowColor="#353535"
             android:text="@string/textview"
             android:textColor="#FFFFFF"
@@ -55,6 +55,6 @@
             app:layout_constraintHorizontal_bias="0.044"
             app:layout_constraintStart_toEndOf="@+id/taskTitle"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.172" />
+            app:layout_constraintVertical_bias="0.197" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
