--- a/app/src/main/res/layout/activity_addtask.xml
+++ b/app/src/main/res/layout/activity_addtask.xml
@@ -126,17 +126,18 @@
 
     <TextView
         android:id="@+id/textView9"
-        android:layout_width="210dp"
-        android:layout_height="31dp"
+        android:layout_width="209dp"
+        android:layout_height="32dp"
         android:layout_marginTop="468dp"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         android:textStyle="bold"
         android:text="@string/task_state0"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.405"
+        app:layout_constraintHorizontal_bias="0.266"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.977" />
 
     <EditText
         android:id="@+id/editTextTaskState"
@@ -154,6 +155,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9"
         app:layout_constraintVertical_bias="0.056" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
