--- a/app/src/main/res/layout/activity_settings_page.xml
+++ b/app/src/main/res/layout/activity_settings_page.xml
@@ -63,7 +63,7 @@
         app:layout_constraintVertical_bias="0.222" />
 
     <Button
-        android:id="@+id/saveBtn"
+        android:id="@+id/saveSettingsBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="save"
