--- a/app/src/main/res/layout/fragment_task_item.xml
+++ b/app/src/main/res/layout/fragment_task_item.xml
@@ -9,52 +9,54 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutFrgmanet"
         android:layout_width="413dp"
-        android:layout_height="109dp"
+        android:layout_height="186dp"
         android:background="#B8B8B8">
 
-        <TextView
-            android:id="@+id/taskTitle"
-            android:layout_width="95dp"
-            android:layout_height="41dp"
-            android:gravity="center"
-            android:shadowColor="#353535"
-            android:text="@string/textview"
-            android:textColor="#FFFFFF"
+        <LinearLayout
+            android:layout_width="267dp"
+            android:layout_height="141dp"
+            android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.05"
+            app:layout_constraintHorizontal_bias="0.047"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.205" />
+            app:layout_constraintVertical_bias="0.355">
 
-        <TextView
-            android:id="@+id/taskBody"
-            android:layout_width="180dp"
-            android:layout_height="51dp"
-            android:gravity="start"
-            android:shadowColor="#353535"
-            android:text="@string/textview"
-            android:textColor="#FFFFFF"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.068"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            <TextView
+                android:id="@+id/taskTitle"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:background="@drawable/textview_border"
+                android:gravity="center"
+                android:shadowColor="#353535"
+                android:text="@string/textview"
+                android:textColor="#9C27B0"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/taskState"
-            android:layout_width="75dp"
-            android:layout_height="28dp"
-            android:gravity="center"
-            android:shadowColor="#353535"
-            android:text="@string/textview"
-            android:textColor="#FBFBFB"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.044"
-            app:layout_constraintStart_toEndOf="@+id/taskTitle"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.197" />
+            <TextView
+                android:id="@+id/taskBody"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:background="@drawable/textview_border"
+                android:gravity="center"
+                android:shadowColor="#353535"
+                android:text="@string/textview"
+                android:textColor="#9C27B0"
+                android:textStyle="bold"
+                tools:layout_editor_absoluteY="157dp" />
+
+            <TextView
+                android:id="@+id/taskState"
+                android:layout_width="match_parent"
+                android:layout_height="46dp"
+                android:background="@drawable/textview_border"
+                android:gravity="center"
+                android:shadowColor="#353535"
+                android:text="@string/textview"
+                android:textColor="#9C27B0"
+                android:textStyle="bold" />
+        </LinearLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
