--- a/app/src/main/res/layout/activity_add_the_task.xml
+++ b/app/src/main/res/layout/activity_add_the_task.xml
@@ -8,7 +8,7 @@
     tools:context=".AddTheTask">
 
     <EditText
-        android:id="@+id/editTextNumber"
+        android:id="@+id/editTextNumberTotalTasks"
         android:layout_width="98dp"
         android:layout_height="45dp"
         android:ems="10"
@@ -143,7 +143,7 @@
             tools:layout_editor_absoluteY="395dp">
 
             <RadioButton
-                android:id="@+id/radioButton2"
+                android:id="@+id/radioTeamFreeWill"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TeamFreeWill"
@@ -153,7 +153,7 @@
                 tools:layout_editor_absoluteY="395dp" />
 
             <RadioButton
-                android:id="@+id/radioButton3"
+                android:id="@+id/radioAckerman"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Ackermann"
@@ -163,7 +163,7 @@
                 tools:layout_editor_absoluteY="443dp" />
 
             <RadioButton
-                android:id="@+id/radioButton"
+                android:id="@+id/radioUnagi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Unagi"
