--- a/app/src/main/res/layout/activity_settings_page.xml
+++ b/app/src/main/res/layout/activity_settings_page.xml
@@ -8,7 +8,7 @@
     tools:context=".SettingsPage">
 
     <Button
-        android:id="@+id/goBackBtn3"
+        android:id="@+id/goBackBtn"
         android:layout_width="93dp"
         android:layout_height="36dp"
         android:text="@string/back"
@@ -25,7 +25,7 @@
         android:layout_width="121dp"
         android:layout_height="42dp"
         android:gravity="center"
-        android:text="username"
+        android:text="Team"
         android:textColor="#F6F6F6"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -39,11 +39,13 @@
         android:id="@+id/editTextTextPersonName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="28dp"
+        android:layout_marginEnd="4dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.939"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.371" />
 
@@ -52,7 +54,7 @@
         android:layout_width="312dp"
         android:layout_height="79dp"
         android:gravity="center"
-        android:text="Enter your username, and hit save."
+        android:text="Enter a specific team, and hit save."
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
